src/Components/css/Contact.css
.contact{
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    padding: 20px;
    background: black;
    width: 100%;
}

.name{
    display: block;
    width: 300px;
}
form{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 15px;
}
form > input{
    padding-left: 10px;
    border: 2px solid;
    border-top: none;
    border-left: none;
    border-right: none;
    outline: none;
}
.email{
    width: 500px;
}
.message{
    width: 700px;
    height: 200px;
    resize: none;
    
    border: 2px solid;
    outline: none;
    border-top: none;
    border-left: none;
    border-right: none;
}
.message{
    padding-left: 10px;
}
.contact--container{
    background-color: white;
    padding: 20px;
}
.success{
    background-color:  #9ce47e;
    color: black;
    border-radius: 5px;
    padding: 10px;
    opacity: 0.7;
    width: 100%;
    font-weight: 550;
}
@media only screen and (max-width: 900px){
    .name{
        width: 200px;
    }
    .message{
        width: 500px;
    }
    .email{
        width: 300px;
    }
    form > button {
        width: 150px; /* Add this line */
    }
}
@media only screen and (max-width: 700px){
    .name{
        width: 200px;
    }
    .message{
        width: 400px;
    }
    .email{
        width: 300px;
    }
    form > button {
        width: 150px; /* Add this line */
    }
}
@media only screen and (max-width: 500px){
    .name{
        width: 200px;
    }
    .message{
        width: 300px;
    }
    .email{
        width: 300px;
    }
    form > button {
        width: 150px; /* Add this line */
    }
}

